# build_system_tools

./: .clang-format  .gitignore  .travis.yml  README.md
01_basic/: CMakeLists.txt  README.md  main.cc  meson.build
01_basic/include/: physics.h
02_shared_libraries/: CMakeLists.txt  README.md  meson.build
02_shared_libraries/include/: mathematics.h
02_shared_libraries/src/: mathematics.cc
03_modularity/: CMakeLists.txt  README.md  meson.build
03_modularity/src/mathematics/: CMakeLists.txt  meson.build
03_modularity/src/physics/: CMakeLists.txt  meson.build  physics.cc
04_tests/: CMakeLists.txt  README.md  main.cc  meson.build
04_tests/src/mathematics/: CMakeLists.txt
04_tests/src/physics/: CMakeLists.txt
04_tests/tests/: CMakeLists.txt  meson.build
04_tests/tests/integration_tests/: meson.build
05_external_library/: CMakeLists.txt  README.md  main.cc  meson.build
05_external_library/src/: meson.build
05_external_library/src/mathematics/: meson.build
05a_external_library/: README.md  hello.c
05b_external_library/: CMakeLists.txt  meson.build
05b_external_library/src/: CMakeLists.txt
05b_external_library/src/mathematics/: CMakeLists.txt
05b_external_library/src/physics/: meson.build
06_unit_tests/: CMakeLists.txt  README.md  meson.build
06_unit_tests/include/: constants.h
06_unit_tests/src/mathematics/: mathematics.cc
06_unit_tests/src/physics/: physics.cc
06_unit_tests/tests/: CMakeLists.txt  meson.build
06_unit_tests/tests/integration_tests/: 02.output  CMakeLists.txt  compare.sh
06_unit_tests/tests/unit_tests/: CMakeLists.txt  mathematics_01_catch.cpp  meson.build  physics_01_catch.cpp
06_unit_tests/tests/unit_tests/catch2/: CMakeLists.txt  meson.build
06_unit_tests/tests/unit_tests/doctest/: mathematics_01_doctest.cpp  physics_01_doctest.cpp
06_unit_tests/tests/unit_tests/gtest/: CMakeLists.txt  meson.build
07_customization/: CMakeLists.txt  README.md  main.cc  meson.build  meson_options.txt
07_customization/include/: my_project_config_cmake.h.in  my_project_config_meson.h.in
07_customization/src/: CMakeLists.txt  meson.build
07_customization/src/mathematics/: meson.build
07_customization/src/physics/: meson.build
07_customization/tests/: CMakeLists.txt  meson.build
07_customization/tests/integration_tests/: 01.output  CMakeLists.txt  meson.build
07_customization/tests/unit_tests/: CMakeLists.txt  mathematics_01.cc  meson.build  physics_01.cc
08a_mpi/: CMakeLists.txt  hello.cc  meson.build  readme.md
08b_mpi/: CMakeLists.txt  meson.build  readme.md
09_pkg-config/: .gitignore  README.md  main.cpp  pkg-config_files.md
09_pkg-config/basic_lib/: meson.build  meson_config.h.in  meson_options.txt
09_pkg-config/basic_lib/include/: abs.hpp  dot.hpp  meson.build  mult_range.hpp  sum_range.hpp
09_pkg-config/basic_lib/src/: abs.cpp  dot.cpp  meson.build  mult_range.cpp  sum_range.cpp
09_pkg-config/cool_lib/: meson.build
09_pkg-config/cool_lib/include/: max_vec.hpp  meson.build  min_vec.hpp  strange_mult.hpp  strange_sum.hpp
09_pkg-config/cool_lib/src/: max_vec.cpp  meson.build  min_vec.cpp  strange_mult.cpp  strange_sum.cpp
09_pkg-config/extra_lib/: meson.build
09_pkg-config/extra_lib/include/: max.hpp  meson.build  min.hpp
09_pkg-config/extra_lib/src/: max.cpp  meson.build  min.cpp
